--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack serve --open",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine --env=jsdom"
   },
   "author": "",
   "license": "ISC",
@@ -14,12 +14,14 @@
     "@babel/core": "^7.13.16",
     "@babel/preset-env": "^7.13.15",
     "babel-loader": "^8.2.2",
+    "babel-register": "^6.26.0",
     "html-webpack-plugin": "^5.3.1",
+    "jasmine": "^3.7.0",
+    "jasmine-es6": "^0.4.3",
+    "jsdom": "^16.5.3",
     "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   },
-  "dependencies": {
-    "lodash": "^4.17.21"
-  }
+  "dependencies": {}
 }
